--- a/app/client/package.json
+++ b/app/client/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@simonwep/pickr": "^1.5.1",
     "@types/socket.io-client": "^1.4.32",
     "socket.io-client": "^2.3.0"
   }
