--- a/app/client/tsconfig.json
+++ b/app/client/tsconfig.json
@@ -8,5 +8,8 @@
       "jsx": "react",
       "allowJs": true,
       "allowSyntheticDefaultImports": true
-    }
+    },
+    "types": [
+      "@simonwep/pickr"
+    ]
   }
