docker compose configuration

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,17 +2,12 @@ FROM node:10
 
 WORKDIR /usr/src/app
 
-COPY client/package.json ./client/
-COPY server/package.json ./server/
+COPY server/package.json ./
 
-RUN /bin/bash -c 'cd client && npm install'
-RUN /bin/bash -c 'cd server && npm install'
+RUN /bin/bash -c 'npm install'
 
-COPY client ./client/
 COPY server ./server/
 
-RUN /bin/bash -c 'cd client && npm run build'
-
-EXPOSE 3132
+EXPOSE 80
 
 CMD ["node", "server/src/index.js"]
