rearranged and fixed compose issue

--- a/planner/nginx/nginx.conf
+++ b/planner/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
 
 
   upstream express {
-      server raid-planner:23451;
+      server raid-planner;
   }
 
   # static assets
@@ -29,7 +29,7 @@ http {
     }
 
     location /planner/ {
-        proxy_pass http://express;
+        proxy_pass http://express/;
 
         proxy_redirect off;
 
