--- a/planner/app/client/package.json
+++ b/planner/app/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack && cp dist/bundle.js ../server/src/public"
+    "build": "webpack && cp dist/bundle.js ../../nginx/public"
   },
   "author": "",
   "license": "ISC",
