--- a/planner/nginx/Dockerfile
+++ b/planner/nginx/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx:alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY ./index.html /usr/share/nginx/html/index.html
+COPY ./public /usr/share/nginx/html/public
